# k8s_gpt

./: .gitignore  Example_tasks.md  README.md  pyproject.toml
agentk8s/: constant.py  main.py  openai.py
example_file/: deployment1.yaml
