[tool.poetry]
name = "agentk8s"
version = "0.1.11"
description = "k8s agent that does all the work for you."
authors = ["天才 <18320122+incomingflyingbrick@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
kgpt = "agentk8s.main:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
docker = "^7.0.0"
pyautogen = {extras = ["retrievechat"], version = "^0.2.2"}
socksio = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
